--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
 
-    <script type="text/javascript" src="js/pali.js"></script>
-    <!-- <script type="text/javascript" src="js/dispari.js"></script> -->
+    <!-- <script type="text/javascript" src="js/pali.js"></script> -->
+    <script type="text/javascript" src="js/dispari.js"></script>
   </body>
 </html>
